2007-07-20	Benedikt Meurer <benny@xfce.org>

	* xfce4-session/shutdown.c: Fix typo. Bug #3381.
	* configure.in.in: Update for new autoconf.
	* po/*.po, po/xfce4-session.pot: Update translations.
	* po/de.po: Update german translation.

2007-01-28	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Fix broken version number of libxfcegui4 dependency.
	  Bug #2824.

2007-01-20	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Post-release version bump.

2007-01-20	Benedikt Meurer <benny@xfce.org>

	* === Released 4.4.0 ===
	* NEWS, configure.in.in: Bump version.
	* configure.in.in: Update dependencies.
	* po/*.po: Update Project-Id-Version.
	* xfce4-session/xfsm-fadeout.c: stipple_data is only required with
	  GTK+ < 2.8.0.

2006-12-21	Benedikt Meurer <benny@xfce.org>

	* libxfsm/xfsm-util.c, xfce4-session/shutdown.c: Apply Jasper's patch
	  to drop the old-style header from the logout dialog. Bug #2653.
	* xfce4-session/xfsm-fadeout.c: Use Xrender to fadeout the background
	  if cairo is available, as it gives better results.

2006-11-12	Benedikt Meurer <benny@xfce.org>

	* xfsm-shutdown-helper/main.c: Apply patch from Francis Gudin
	  <fgudin@nerim.net> to fix poweroff on DragonFly BSD. Bug #2567.

2006-11-04	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Post-release version bump.

2006-11-04	Benedikt Meurer <benny@xfce.org>

	* === Released 4.3.99.2 ===
	* NEWS, configure.in.in: Bump version.
	* configure.in.in: Update dependencies.
	* po/*.po: Update Project-Id-Version.
	* xfce4-tips/data/tips.dat: Regenerate the Tips'n'Tricks database.

2006-11-04	Jean-François Wauthy <pollux@xfce.org>

	* xfce4-tips/data/tips: Remove references to xftaskbar4 and
	  xfce4-iconbox and rename xffm to Thunar. Bug #1332.

2006-10-28	Benedikt Meurer <benny@xfce.org>

	* xfce4-session.rc: Be sure to start Thunar prior to xfdesktop on
	  first login to avoid the trash error from xfdesktop if the session
	  bus is not configured properly. Bug #2447.
