@@ -1,3 +1,8 @@
+2007-11-28	Benedikt Meurer <benny@xfce.org>
+
+	* engines/balou/config.c, engines/simple/simple.c: Use
+	  GtkFileChooser instead of XfceFileChooser. Bug #3492.
+
 2007-07-20	Benedikt Meurer <benny@xfce.org>
 
 	* xfce4-session/shutdown.c: Fix typo. Bug #3381.
